Fixes category box text alignment.

--- a/myuw_mobile/static/css/mobile.less
+++ b/myuw_mobile/static/css/mobile.less
@@ -84,7 +84,15 @@ body {
                 a { background:#333; height:100px; margin-bottom:1em; padding:8px; display: block;
                     
                     /* for browsers that support flexbox, display text vertically centered */
-                    display:flex; justify-content:center; align-items:center;
+                    display: -webkit-flexbox;
+                    display: -ms-flexbox;
+                    display: -webkit-flex;
+                    display: flex;
+                    -webkit-flex-align: center;
+                    -ms-flex-align: center;
+                    -webkit-align-items: center;
+                    align-items: center;  
+                    justify-content: center;
                     
                     &:hover { background: #555; }
                 }
